--- a/PostaMD/Base.lproj/Main.storyboard
+++ b/PostaMD/Base.lproj/Main.storyboard
@@ -22,11 +22,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="98"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VHT-dP-uUg">
-                                            <rect key="frame" x="14" y="5" width="268" height="90"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VHT-dP-uUg">
+                                            <rect key="frame" x="16" y="3" width="266" height="93"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgP-bX-q2I">
-                                                    <rect key="frame" x="0.0" y="8" width="268" height="25"/>
+                                                    <rect key="frame" x="0.0" y="8" width="266" height="25"/>
                                                     <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="25" id="Scc-oz-hOX"/>
@@ -38,7 +38,7 @@
                                                     <size key="shadowOffset" width="0.0" height="1"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RmX-CX-qWr">
-                                                    <rect key="frame" x="0.0" y="38" width="268" height="21"/>
+                                                    <rect key="frame" x="0.0" y="38" width="266" height="21"/>
                                                     <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="MVD-v7-BIa"/>
@@ -50,7 +50,7 @@
                                                     <size key="shadowOffset" width="0.0" height="1"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="266" translatesAutoresizingMaskIntoConstraints="NO" id="bU2-db-VP5">
-                                                    <rect key="frame" x="0.0" y="64" width="268" height="21"/>
+                                                    <rect key="frame" x="0.0" y="64" width="266" height="21"/>
                                                     <animations/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="lhV-oo-PYg"/>
@@ -82,7 +82,7 @@
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="VHT-dP-uUg" secondAttribute="trailing" constant="5" id="TCC-kp-Y8k"/>
                                         <constraint firstItem="VHT-dP-uUg" firstAttribute="centerY" secondItem="hvw-Vk-jEz" secondAttribute="centerY" id="U8s-BD-Hxy"/>
-                                        <constraint firstItem="VHT-dP-uUg" firstAttribute="leading" secondItem="hvw-Vk-jEz" secondAttribute="leading" constant="14" id="pdP-cK-ymb"/>
+                                        <constraint firstItem="VHT-dP-uUg" firstAttribute="leading" secondItem="hvw-Vk-jEz" secondAttribute="leading" constant="16" id="pdP-cK-ymb"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <animations/>
@@ -116,7 +116,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="QUs-Jf-vZG">
                             <connections>
-                                <action selector="refreshPackages:" destination="JFt-Mh-LAB" id="oDm-e8-4mi"/>
+                                <action selector="refreshPackages:" destination="JFt-Mh-LAB" id="yO1-9m-kOr"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -232,9 +232,12 @@
                             <rect key="frame" x="0.0" y="64" width="320" height="52"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tracking Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cVI-YV-veP">
-                                    <rect key="frame" x="10" y="6" width="301" height="40"/>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tracking Number" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cVI-YV-veP">
+                                    <rect key="frame" x="10" y="6" width="300" height="40"/>
                                     <animations/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="40" id="ieh-Ty-Mj9"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="22"/>
                                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                     <connections>
@@ -244,6 +247,11 @@
                             </subviews>
                             <animations/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="cVI-YV-veP" secondAttribute="trailing" constant="10" id="jWS-JH-Tv6"/>
+                                <constraint firstItem="cVI-YV-veP" firstAttribute="leading" secondItem="23m-xq-mE3" secondAttribute="leading" constant="10" id="oSs-Mb-cbZ"/>
+                                <constraint firstItem="cVI-YV-veP" firstAttribute="top" secondItem="23m-xq-mE3" secondAttribute="top" constant="6" id="xDt-1t-kMU"/>
+                            </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TrackingInfo" rowHeight="66" id="ut3-Sz-9ak" customClass="TrackingInfoCell">
