--- a/PostaMD/Base.lproj/Main.storyboard
+++ b/PostaMD/Base.lproj/Main.storyboard
@@ -9,25 +9,25 @@
         <scene sceneID="s3i-rA-SZx">
             <objects>
                 <tableViewController id="JFt-Mh-LAB" customClass="PackagesViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="99" sectionHeaderHeight="22" sectionFooterHeight="22" id="C9P-hE-eph">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="22" sectionFooterHeight="22" id="C9P-hE-eph">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PackageCell" rowHeight="99" id="gbs-X4-gZd" customClass="PackageCell">
-                                <rect key="frame" x="0.0" y="86" width="320" height="99"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PackageCell" rowHeight="75" id="gbs-X4-gZd" customClass="PackageCell">
+                                <rect key="frame" x="0.0" y="86" width="320" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gbs-X4-gZd" id="hvw-Vk-jEz">
-                                    <rect key="frame" x="0.0" y="0.0" width="287" height="98"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="74"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VHT-dP-uUg">
-                                            <rect key="frame" x="16" y="3" width="266" height="93"/>
+                                            <rect key="frame" x="16" y="6" width="266" height="63"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qgP-bX-q2I">
-                                                    <rect key="frame" x="0.0" y="8" width="266" height="25"/>
+                                                    <rect key="frame" x="0.0" y="5" width="266" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="25" id="Scc-oz-hOX"/>
+                                                        <constraint firstAttribute="height" constant="20" id="Scc-oz-hOX"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                                     <color key="textColor" red="0.33822381496429443" green="0.33826833963394165" blue="0.33820867538452148" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -36,23 +36,23 @@
                                                     <size key="shadowOffset" width="0.0" height="1"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RmX-CX-qWr">
-                                                    <rect key="frame" x="0.0" y="38" width="266" height="21"/>
+                                                    <rect key="frame" x="0.0" y="29" width="266" height="16"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="MVD-v7-BIa"/>
+                                                        <constraint firstAttribute="height" constant="16" id="MVD-v7-BIa"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                     <color key="shadowColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <size key="shadowOffset" width="0.0" height="1"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="266" translatesAutoresizingMaskIntoConstraints="NO" id="bU2-db-VP5">
-                                                    <rect key="frame" x="0.0" y="64" width="266" height="21"/>
+                                                    <rect key="frame" x="0.0" y="46" width="266" height="12"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="lhV-oo-PYg"/>
+                                                        <constraint firstAttribute="height" constant="12" id="lhV-oo-PYg"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                     <color key="shadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <size key="shadowOffset" width="0.0" height="1"/>
@@ -60,13 +60,13 @@
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstItem="RmX-CX-qWr" firstAttribute="top" secondItem="qgP-bX-q2I" secondAttribute="bottom" constant="5" id="1Qb-54-glC"/>
+                                                <constraint firstItem="RmX-CX-qWr" firstAttribute="top" secondItem="qgP-bX-q2I" secondAttribute="bottom" constant="4" id="1Qb-54-glC"/>
                                                 <constraint firstAttribute="trailing" secondItem="bU2-db-VP5" secondAttribute="trailing" id="5Gp-XH-Pfj"/>
-                                                <constraint firstAttribute="bottom" secondItem="bU2-db-VP5" secondAttribute="bottom" constant="8" id="C20-pd-y8W"/>
+                                                <constraint firstAttribute="bottom" secondItem="bU2-db-VP5" secondAttribute="bottom" constant="5" id="C20-pd-y8W"/>
                                                 <constraint firstItem="RmX-CX-qWr" firstAttribute="leading" secondItem="VHT-dP-uUg" secondAttribute="leading" id="FhW-gv-KNu"/>
                                                 <constraint firstAttribute="trailing" secondItem="RmX-CX-qWr" secondAttribute="trailing" id="HNS-qW-ewY"/>
-                                                <constraint firstItem="qgP-bX-q2I" firstAttribute="top" secondItem="VHT-dP-uUg" secondAttribute="top" constant="8" id="KFj-55-wtn"/>
-                                                <constraint firstItem="bU2-db-VP5" firstAttribute="top" secondItem="RmX-CX-qWr" secondAttribute="bottom" constant="5" id="LEv-DZ-et5"/>
+                                                <constraint firstItem="qgP-bX-q2I" firstAttribute="top" secondItem="VHT-dP-uUg" secondAttribute="top" constant="5" id="KFj-55-wtn"/>
+                                                <constraint firstItem="bU2-db-VP5" firstAttribute="top" secondItem="RmX-CX-qWr" secondAttribute="bottom" constant="1" id="LEv-DZ-et5"/>
                                                 <constraint firstAttribute="trailing" secondItem="qgP-bX-q2I" secondAttribute="trailing" id="OYE-1c-xIo"/>
                                                 <constraint firstItem="bU2-db-VP5" firstAttribute="leading" secondItem="VHT-dP-uUg" secondAttribute="leading" id="fGa-hr-BdW"/>
                                                 <constraint firstItem="qgP-bX-q2I" firstAttribute="leading" secondItem="VHT-dP-uUg" secondAttribute="leading" id="g55-PB-Nca"/>
